# game-of-life

./: LICENSE  README.md  pyproject.toml
game_of_life/: animation.py  domain.py  main.py
tests/: test_domain.py  test_main.py
