[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = ["Pierre-Guillaume Laurin <pierreguillaumelaurin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
pylint = "^3.0.2"

[tool.pytest.ini_options]
python_paths = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
